<resources>
    <string name="app_name">mhs.id</string>

    <string name="detail_title">Detail Mahasiswa</string>
    <string name="title_app">Mhs.id</string>
    <string name="image">Gambar</string>
    <string name="name_title">Nama</string>
    <string name="nim_title">NIM</string>
    <string name="univ_title">Kampus</string>
    <string name="prodi_title">Prodi</string>
    <string name="jenis_kelamin_title">Jenis kelamin</string>
    <string name="jenjang_title">Jenjang</string>
    <string name="smt_masuk_title">Semester masuk</string>
    <string name="status_awal_title">Status awal</string>
    <string name="status_saat_ini_title">Status saat ini</string>
    <string name="nomor_ijazah_title">Nomor Ijazah</string>
    <string name="semester_title">Semester</string>
    <string name="status_title">Status</string>
    <string name="sks_title">SKS</string>
    <string name="kode_matkul_title">Kode Matkul</string>
    <string name="nama_matkul_title">Nama Matkul</string>
    <string name="name">Kuroco Harmadi</string>
    <string name="nim">1232131</string>
    <string name="univ">Universitas Abc</string>
    <string name="prodi">Sastra Pertanian</string>
    <string name="jenis_kelamin">Laki-Laki</string>
    <string name="jenjang">S1</string>
    <string name="smt_masuk">2019 Ganjil</string>
    <string name="status_awal">Peserta didik baru</string>
    <string name="status_saat_ini">Lulus</string>
    <string name="nomor_ijazah">0</string>
    <string name="semester">2019 Ganjil</string>
    <string name="status">Aktif</string>
    <string name="sks">20</string>
    <string name="kode_matkul">IT011302</string>
    <string name="nama_matkul">PENGANTAR TEKNOLOGI SISTEM INFORMASI **</string>
    <string name="status_kuliah">Riwayat Status Kuliah</string>
    <string name="status_studi">Riwayat Studi</string>
    <string name="search_hint">Cari berdasarkan nama atau nim..</string>
    <string name="search_error">Data tidak ditemukan!</string>
    <string name="search_text">Mau cari siapa..?</string>
    <string name="error_data">An error occurred while passing data</string>
</resources>